--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Место</title>
   </head>
   <body>
-    <div class="main-page">
+    <main class="main-page">
       <header class="header">
         <img
           src="./images/header/logo.png"
@@ -15,6 +15,7 @@
           alt="Лого хедер"
         />
       </header>
+      <main class="content">
       <section class="profile">
         <img
           src="./images/profile/avatar.png"
@@ -144,7 +145,7 @@
           </div>
         </div>
       </section>
-
+</main>
       <footer class="footer">
         <img
           src="./images/footer/2020Mesto-Russia.png"
