Проект после исправлений 2

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Место</title>
   </head>
   <body class="body">
-  
     <main class="main-page">
-
       <header class="header">
         <img
           src="./images/header/logo.svg"
@@ -17,7 +15,6 @@
           alt="Лого хедер"
         />
       </header>
-  
 
       <section class="profile">
         <img
@@ -145,23 +142,14 @@
         </article>
       </section>
 
-
       <footer class="footer">
         <p class="footer__logo">© 2020 Mesto Russia</p>
       </footer>
-
     </main>
-
-  
 
     <div class="popup" id="popupForm">
       <div class="popup__container">
-        <button
-          aria-label="close"
-          type="button"
-          class="popup__close-button"
-          type="button"
-        >
+        <button aria-label="close" type="button" class="popup__close-button">
           <img
             src="./images/profile/close-icon.svg"
             class="popup__close-button-image"
