--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Место</title>
   </head>
   <body class="body">
+  
     <main class="main-page">
+
       <header class="header">
         <img
           src="./images/header/logo.svg"
@@ -15,6 +17,7 @@
           alt="Лого хедер"
         />
       </header>
+  
 
       <section class="profile">
         <img
@@ -142,14 +145,23 @@
         </article>
       </section>
 
+
       <footer class="footer">
         <p class="footer__logo">© 2020 Mesto Russia</p>
       </footer>
+
     </main>
+
+  
 
     <div class="popup" id="popupForm">
       <div class="popup__container">
-        <button aria-label="close" type="button" class="popup__close-button">
+        <button
+          aria-label="close"
+          type="button"
+          class="popup__close-button"
+          type="button"
+        >
           <img
             src="./images/profile/close-icon.svg"
             class="popup__close-button-image"
@@ -158,7 +170,7 @@
         </button>
         <h2 class="popup__title">Редактировать профиль</h2>
 
-        <form action="#" class="container__form" name="popupContainer">
+        <form action="#" class="popup__form">
           <input
             type="text"
             value=""
