--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
     <title>Место</title>
   </head>
   <body class="body">
-  
+    <header class="header">
+      <img
+        src="./images/header/logo.svg"
+        class="header__logo"
+        alt="Лого хедер"
+      />
+    </header>
+
     <main class="main-page">
-
-      <header class="header">
-        <img
-          src="./images/header/logo.svg"
-          class="header__logo"
-          alt="Лого хедер"
-        />
-      </header>
-  
-
       <section class="profile">
         <img
           src="./images/profile/avatar.png"
@@ -135,7 +132,7 @@
             alt="Карачаево-Черкессия"
           />
           <div class="element__like-bar">
-            <h3 class="element__title">Карачаево-Черкессия</h3>
+            <h2 class="element__title">Карачаево-Черкессия</h2>
             <button
               aria-label="Like"
               class="element__like-button"
@@ -144,23 +141,15 @@
           </div>
         </article>
       </section>
-
-
-      <footer class="footer">
-        <p class="footer__logo">© 2020 Mesto Russia</p>
-      </footer>
-
     </main>
 
-  
+    <footer class="footer">
+      <p class="footer__logo">© 2020 Mesto Russia</p>
+    </footer>
 
     <div class="popup" id="popupForm">
       <div class="popup__container">
-        <button
-          aria-label="close"
-          type="button"
-          class="popup__close-button"
-          >
+        <button aria-label="close" type="button" class="popup__close-button">
           <img
             src="./images/profile/close-icon.svg"
             class="popup__close-button-image"
@@ -169,7 +158,7 @@
         </button>
         <h2 class="popup__title">Редактировать профиль</h2>
 
-        <form action="#" class="popup__form">
+        <form action="#" name="popupForm" class="popup__form">
           <input
             type="text"
             value=""
