Сохранение после редактирования

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <input
             type="text"
             placeholder="Название"
-            class="popup__text"
+            class="popup__text popup__text_mesto-name"
             id="popup-mesto-name"
             name="popup-mesto-name"
             required
@@ -113,7 +113,7 @@
           <input
             type="text"
             placeholder="Ссылка на картинку"
-            class="popup__text"
+            class="popup__text popup__text_mesto-link"
             id="popup-mesto-link"
             name="popup-mesto-link"
             required
