--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
             class="popup__form popup__form_edit_profile"
             novalidate
           >
-            <label for="profilename-input"></label>
             <input
               type="text"
               value=""
@@ -93,7 +92,6 @@
               class="popup__input-error profilename-input-error"
             ></span>
 
-            <label for="profilewhois-input"></label>
             <input
               type="text"
               id="profilewhois-input"
@@ -160,7 +158,7 @@
               class="popup__save-button"
               id="popup__save-new-mesto-button"
             >
-              Сохранить
+              Создать
             </button>
           </form>
         </div>
@@ -210,7 +208,7 @@
     </template>
     <script src="cards.js"></script>
     <script src="formConstants.js"></script>
-    <script src="script.js"></script>
     <script src="validate.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
