--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <button
               aria-label="close"
               type="button"
-              class="popup__close-button popup__close-button_image"
+              class="popup__close-button"
             >
               <img
                 src="./images/profile/close-icon.svg"
