--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
 
     <div class="popup popup_style_image">
-      <div class="popup__overlay">
+      <div class="popup__overlay popup__overlay_image">
         <div class="popup__container popup__container_style_image">
           <div class="popup__image">
             <button
