--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               type="text"
               value=""
               class="popup__input popup__input_name"
-              id="profilename-input"
+              id="profilename-input-error"
               minlength="2"
               maxlength="40"
               required
@@ -206,9 +206,11 @@
         </div>
       </article>
     </template>
-    <script src="cards.js"></script>
-    <script src="formConstants.js"></script>
-    <script src="validate.js"></script>
-    <script src="script.js"></script>
+
+    <script type="module" src="formConstants.js"></script>
+    <script type="module" src="formValidator.js"></script>
+    <script type="module" src="script.js"></script>
+    <script type="module" src="cards.js"></script>
+    <script type="module" src="card.js"></script>
   </body>
 </html>
